@@ -1,5 +1,8 @@
 #!/usr/bin/perl
 
+use strict;
+use warnings;
+
 use Test::More tests => 4;
 use Parse::ErrorString::Perl;
 use Test::Differences;
